--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kata-pricing",
   "version": "0.1.0",
+  "homepage": "http://aamirafridi.github.io/kata-pricing",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -26,7 +27,9 @@
     "test:watch": "npm test --watchAll",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x} --fix"
+    "lint": "tsc --noEmit && eslint src/**/*.ts{,x} --fix",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "husky": {
     "hooks": {
@@ -98,6 +101,7 @@
     "eslint-plugin-no-only-tests": "^2.4.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
