--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "lint-staged": {
     "src/**/*{.js,.jsx,.ts,.tsx}": [
       "prettier --write",
-      "yarn lint"
+      "yarn lint",
+      "yarn deploy"
     ]
   },
   "eslintConfig": {
