--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -103,6 +102,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "gh-pages": "^3.1.0",
+    "husky": "4.2.3",
     "prettier": "^2.2.1"
   }
 }
