--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn deploy"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
